# pulpo

./: Cargo.toml  README.md  project.md
crates/gateway-asterdex/: Cargo.toml
crates/gateway-asterdex/examples/: futures_rest.rs  stream_liquidations.rs  stream_mark_price.rs  stream_orderbook.rs  stream_trades.rs
crates/gateway-asterdex/src/: lib.rs
crates/gateway-asterdex/src/futures/: mapper.rs  mod.rs  ws.rs  (+1 more)
crates/gateway-binance/: Cargo.toml
crates/gateway-binance/examples/: basic_rest.rs  futures_rest.rs  stream_trades.rs
crates/gateway-binance/src/: lib.rs  local_book.rs  mapper.rs  rate_limit.rs  rest.rs  ws.rs
crates/gateway-bitget/: Cargo.toml
crates/gateway-bitget/examples/: basic_rest.rs  futures_rest.rs  stream_futures.rs  stream_trades.rs
crates/gateway-bitget/src/: lib.rs  mapper.rs  rest.rs  ws.rs
crates/gateway-bitunix/: Cargo.toml
crates/gateway-bitunix/examples/: futures_rest.rs  stream_orderbook.rs  stream_orderbook_all.rs  stream_trades.rs
crates/gateway-bitunix/src/: lib.rs
crates/gateway-blofin/: Cargo.toml
crates/gateway-blofin/examples/: futures_rest.rs  stream_orderbook.rs  stream_orderbook_all.rs  stream_trades.rs
crates/gateway-blofin/src/: lib.rs
crates/gateway-bybit/: Cargo.toml
crates/gateway-bybit/examples/: basic_rest.rs  futures_rest.rs  stream_trades.rs
crates/gateway-bybit/src/: lib.rs  mapper.rs  rest.rs  ws.rs
crates/gateway-bybit/src/futures/: mapper.rs  mod.rs  rest.rs  ws.rs
crates/gateway-bybit/src/spot/: mapper.rs  mod.rs  rest.rs  ws.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: config.rs  error.rs  lib.rs  stream.rs  traits.rs  types.rs
crates/gateway-gate/: Cargo.toml
crates/gateway-gate/examples/: basic_rest.rs  futures_rest.rs  stream_futures.rs  stream_trades.rs
crates/gateway-gate/src/: lib.rs
crates/gateway-hyperliquid/: Cargo.toml
crates/gateway-hyperliquid/examples/: futures_rest.rs  stream_mark_price.rs  stream_orderbook.rs  stream_orderbook_all.rs  stream_trades.rs
crates/gateway-hyperliquid/src/: lib.rs
crates/gateway-kucoin/: Cargo.toml
crates/gateway-kucoin/examples/: futures_rest.rs  futures_stream_orderbook.rs  futures_stream_orderbook_all.rs  futures_stream_trades.rs  stream_trades.rs  ws_debug.rs
crates/gateway-kucoin/src/: lib.rs
crates/gateway-lighter/: Cargo.toml
crates/gateway-lighter/examples/: futures_rest.rs  stream_mark_price.rs  stream_orderbook.rs  stream_trades.rs
crates/gateway-lighter/src/: lib.rs
crates/gateway-manager/: Cargo.toml
crates/gateway-manager/examples/: multi_exchange.rs
crates/gateway-manager/src/: lib.rs
crates/gateway-mexc/: Cargo.toml
crates/gateway-mexc/examples/: basic_rest.rs  stream_futures.rs  stream_futures_batch.rs  stream_trades.rs  ws_debug.rs
crates/gateway-mexc/src/: lib.rs
crates/gateway-okx/: Cargo.toml
crates/gateway-okx/examples/: basic_rest.rs  futures_rest.rs  stream_trades.rs
crates/gateway-okx/src/: lib.rs
crates/gateway-phemex/: Cargo.toml
crates/gateway-phemex/examples/: futures_rest.rs  stream_orderbook.rs  stream_orderbook_all.rs  stream_trades.rs
crates/gateway-phemex/src/: lib.rs
crates/gateway-toobit/: Cargo.toml
crates/gateway-toobit/examples/: futures_rest.rs  stream_orderbook.rs  stream_orderbook_all.rs  stream_trades.rs
crates/gateway-toobit/src/: lib.rs
crates/gateway-xt/: Cargo.toml
crates/gateway-xt/examples/: futures_rest.rs  stream_orderbook.rs  stream_orderbook_all.rs  stream_trades.rs
crates/gateway-xt/src/: lib.rs
docs/plans/: 2026-02-21-pulpo-loco-design.md  2026-02-21-pulpo-loco-implementation.md  2026-02-22-perpetual-futures-design.md  2026-02-22-perpetual-futures-implementation.md
(+77 files in other folders)
