[workspace]
resolver = "2"
members = [
    "crates/gateway-core",
    "crates/gateway-binance",
    "crates/gateway-bitget",
    "crates/gateway-bybit",
    "crates/gateway-okx",
    "crates/gateway-gate",
    "crates/gateway-mexc",
    "crates/gateway-kucoin",
    "crates/gateway-lighter",
    "crates/gateway-asterdex",
    "crates/gateway-hyperliquid",
    "crates/gateway-phemex",
    "crates/gateway-blofin",
    "crates/gateway-manager",
]
