[package]
name = "gateway-bybit"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway-core = { path = "../gateway-core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
async-trait = "0.1"
tracing = "0.1"
url = "2"

[dev-dependencies]
rust_decimal_macros = "1"
