[package]
name = "gateway-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
futures = "0.3"
rust_decimal = { version = "1", features = ["serde-with-str"] }
async-trait = "0.1"
