[package]
name = "gateway-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway-core = { path = "../gateway-core" }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }

gateway-binance = { path = "../gateway-binance", optional = true }
gateway-bybit = { path = "../gateway-bybit", optional = true }

[features]
default = ["binance", "bybit"]
binance = ["dep:gateway-binance"]
bybit = ["dep:gateway-bybit"]
all = ["binance", "bybit"]
