[package]
name = "gateway-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway-core = { path = "../gateway-core" }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt"] }

gateway-binance = { path = "../gateway-binance", optional = true }
gateway-bitget = { path = "../gateway-bitget", optional = true }
gateway-bybit = { path = "../gateway-bybit", optional = true }

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
gateway-binance = { path = "../gateway-binance" }
gateway-bitget = { path = "../gateway-bitget" }
gateway-bybit = { path = "../gateway-bybit" }

[features]
default = ["binance", "bitget", "bybit"]
binance = ["dep:gateway-binance"]
bitget = ["dep:gateway-bitget"]
bybit = ["dep:gateway-bybit"]
all = ["binance", "bitget", "bybit"]
